# krafter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: default.frag.glsl  default.vert.glsl  editorconfig.ini
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: gl.h
lib/stb/: CMakeLists.txt
src/: block.cpp  block.h  camera.cpp  camera.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  window.cpp  window.h
